# BadmintonSense

./: .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: config.yaml
notebooks/: exploration.ipynb
scripts/: 01_download_data.py  02_download_videos.sh  02_download_videos_subset.sh  03_extract_clips.py  04_extract_poses.py  05_preprocess.py  06_train.py  07_evaluate.py  video_mapping.json
src/data/: clip_extractor.py  dataset.py  download.py  pose_extractor.py  preprocessing.py
src/models/: lstm.py  transformer.py  utils.py
src/training/: evaluator.py  losses.py  trainer.py
src/utils/: logger.py  visualization.py
tests/: test_pipeline.py
